@startuml Rubi

class Perfil {

    -id: UUID
    -username: String
    -nome: String
    -email: String
    -biografia : String
}

class Postagem {

    -id: UUID
    -perfilId: UUID
    -data: LocalDateTime
    -texto: String
    -curtidas: int
    -descurtidas: int
}

class PostagemAvancada{

    -visualizacoesRestantes: Integer
    -hashtags: ArrayList<String>
}

interface IRepositorioDePostagens {

    +ArrayList<Postagem> getPostagens()


    +ArrayList<PostagemAvancada> getPostagensAvancadas()


    +void incluir(Postagem postagem) 


    +Optional<Postagem> consultarPostagem(UUID id)

    
    +ArrayList<Postagem> consultarPostagens(String texto, Perfil perfil, String hashtag)

    +boolean postagemJaExiste(UUID id)
}

class RepositorioDePostagens {
    -postagens: ArrayList<Postagem>
}

class RepositorioDePerfil {
    -perfis : ArrayList<Perfil>
}

class RedeSocial {
    -perfis: RepositorioDePerfis
    -postagens: RepositorioDePostagens
}

class Hashtag {
    -hashtag: String
    -contadorDeUsos: Integer
}

RedeSocial *-- RepositorioDePostagens
RedeSocial *-- RepositorioDePerfil
RepositorioDePostagens *-- Postagem
RepositorioDePerfil *-- Perfil
Postagem <|-- PostagemAvancada
@enduml